platform/octomatron/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octomatron
  namespace: octomatron
  labels:
    app.kubernetes.io/name: octomatron
spec:
  selector:
    app.kubernetes.io/name: octomatron
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
