platform/octomatron/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: octomatron
  namespace: octomatron
  labels:
    app.kubernetes.io/name: octomatron
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: octomatron
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 8080
